add user api, improve user and casbin,add jwt auth
