# docs/swagger.yaml
@@ -18,6 +18,33 @@ definitions:
         additionalProperties: true
         type: object
     type: object
+  request.GetName:
+    properties:
+      forced:
+        type: boolean
+      username:
+        type: string
+    type: object
+  request.Login:
+    properties:
+      captchaId:
+        type: string
+      captchaValue:
+        type: string
+      password:
+        type: string
+      username:
+        type: string
+    type: object
+  request.NewPassword:
+    properties:
+      newPassword:
+        type: string
+      password:
+        type: string
+      username:
+        type: string
+    type: object
   request.PodRequest:
     properties:
       containerName:
@@ -46,7 +73,31 @@ definitions:
     type: object
   response.CommonResponse:
     properties:
-      response message: {}
+      data: {}
+      msg:
+        type: string
+    type: object
+  system.User:
+    properties:
+      createdAt:
+        description: 创建时间
+        type: string
+      email:
+        type: string
+      id:
+        description: 主键ID
+        type: integer
+      nickName:
+        type: string
+      password:
+        type: string
+      phone:
+        type: string
+      updatedAt:
+        description: 更新时间
+        type: string
+      username:
+        type: string
     type: object
 info:
   contact: {}
@@ -54,6 +105,39 @@ info:
   title: K8S Client API
   version: 0.0.1
 paths:
+  /base/captcha:
+    post:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.CommonResponse'
+      summary: 生成验证码,返回包括随机数id,base64,验证码长度
+      tags:
+      - Base
+  /base/login:
+    post:
+      parameters:
+      - description: 用户名，密码
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.Login'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.CommonResponse'
+      summary: 用户登录
+      tags:
+      - Base
   /deployment/create:
     post:
       parameters:
@@ -70,6 +154,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/response.CommonResponse'
+      security:
+      - ApiKeyAuth: []
       summary: 创建 Deployment
       tags:
       - Deployment
@@ -93,6 +179,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/response.CommonResponse'
+      security:
+      - ApiKeyAuth: []
       summary: 删除单个 Deployment
       tags:
       - Deployment
@@ -116,6 +204,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/response.CommonResponse'
+      security:
+      - ApiKeyAuth: []
       summary: 获取单个 Deployment
       tags:
       - Deployment
@@ -134,6 +224,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/response.CommonResponse'
+      security:
+      - ApiKeyAuth: []
       summary: 获取命名空间下的所有 Deployment
       tags:
       - Deployment
@@ -153,6 +245,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/response.CommonResponse'
+      security:
+      - ApiKeyAuth: []
       summary: 更新 Deployment 的镜像版本和副本集
       tags:
       - Deployment
@@ -171,6 +265,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/response.CommonResponse'
+      security:
+      - ApiKeyAuth: []
       summary: 创建 Namespace
       tags:
       - Namespace
@@ -189,6 +285,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/response.CommonResponse'
+      security:
+      - ApiKeyAuth: []
       summary: 删除单个 Namespace
       tags:
       - Namespace
@@ -207,6 +305,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/response.CommonResponse'
+      security:
+      - ApiKeyAuth: []
       summary: 获取单个 Namespace
       tags:
       - Namespace
@@ -219,6 +319,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/response.CommonResponse'
+      security:
+      - ApiKeyAuth: []
       summary: 获取所有的 Namespace
       tags:
       - Namespace
@@ -238,6 +340,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/response.CommonResponse'
+      security:
+      - ApiKeyAuth: []
       summary: 创建 Pod
       tags:
       - Pod
@@ -261,6 +365,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/response.CommonResponse'
+      security:
+      - ApiKeyAuth: []
       summary: 删除单个 Pod
       tags:
       - Pod
@@ -284,6 +390,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/response.CommonResponse'
+      security:
+      - ApiKeyAuth: []
       summary: 获取单个 Pod 信息
       tags:
       - Pod
@@ -302,6 +410,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/response.CommonResponse'
+      security:
+      - ApiKeyAuth: []
       summary: 获取命名空间中所有的  Pod 信息
       tags:
       - Pod
@@ -321,9 +431,108 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/response.CommonResponse'
+      security:
+      - ApiKeyAuth: []
       summary: 更新 Pod
       tags:
       - Pod
+  /user/create:
+    post:
+      parameters:
+      - description: 用户名，密码，昵称，手机和邮箱
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/system.User'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.CommonResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: 注册用户
+      tags:
+      - User
+  /user/delete:
+    delete:
+      parameters:
+      - description: 用户名，密码，昵称，手机和邮箱
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.GetName'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.CommonResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: 删除用户
+      tags:
+      - User
+  /user/get:
+    get:
+      parameters:
+      - description: 用户名
+        in: query
+        name: username
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.CommonResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: 获取用户信息
+      tags:
+      - User
+  /user/list:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.CommonResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: 列出所有用户
+      tags:
+      - User
+  /user/update:
+    put:
+      parameters:
+      - description: 用户名，原密码，新密码
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.NewPassword'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.CommonResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: 用户更新密码
+      tags:
+      - User
 securityDefinitions:
   ApiKeyAuth:
     in: header
